<?xml version="1.0"?>
<package format="3">
  <name>ros2_tools</name>
  <version>0.1.0</version>
  <description>ROS2 tools for rosbag2 analysis</description>
  <maintainer email="shimkota@kajima.com">Kota shimizu</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosidl_runtime_py</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>